# medical-ai-diagonsis-system

./: .gitignore  README.md  TESTING.md  package-lock.json  package.json  render.yaml
backend/: .dockerignore  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  seed_data.py
backend/app/: __init__.py  config.py  database.py
backend/app/models/: appointment.py  doctor.py  medical_record.py  patient.py  rating.py  user.py
backend/app/routes/: ai.py  appointments.py  auth.py  doctors.py  messages.py  patients.py  ratings.py
backend/src/: __init__.py  config.py  database.py
backend/src/models/: __init__.py  appointment.py  chat_history.py  doctor.py  message.py  prescription.py  schedule.py
backend/src/routes/: analytics.py  appointments.py  chatbot.py  doctors.py  messages.py  prescriptions.py  ratings.py  reports.py  schedules.py  video_call.py  video_calls.py
backend/src/services/: chatbot_service.py  report_service.py  video_call_service.py
backend/tests/: conftest.py  test_ai_safety.py  test_models.py  test_performance.py  test_routes.py  test_security.py  test_services.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/dashboard/: layout.tsx
frontend/components/call/: VideoControls.tsx  VideoPlayer.tsx
frontend/components/shared/: DoctorChatbot.tsx  Navbar.tsx  Triage.tsx
frontend/components/ui/: button.tsx  dropdown-menu.tsx  select.tsx
frontend/lib/: auth.tsx
frontend/src/app/: layout.tsx  (+1 more)
(+84 files in other folders)
