[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-socketio>=5.5.0",
    "python-socketio>=5.12.0",
    "eventlet>=0.40.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "werkzeug>=3.1.4",
    "reportlab>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "mongomock>=4.3.0",
    "gunicorn>=20.1.0",
    "getstream>=0.1.0",
    "stream-chat>=3.0.0",
]
